--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.18",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "swr": "^1.1.2",
+    "use-supercluster": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
