fix markers size and lint code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,12 @@
         "react"
     ],
     "rules": {
+      "linebreak-style": ["error", "windows"],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "react/function-component-definition": [1, {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }],
+      "react/prop-types": "off"
     }
 }
